[package]
name = "vecvis"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.14.2"
bevy_infinite_grid = "0.13.0"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"

[dev-dependencies]
rand = "0.8.5"
